Removed My Measurements from Nav, Fixed Sign up button spacing, Changed Filter to View by types, Fixed Spacing in Search Results, Added Media Query to Landing page, Created frontend test file

--- a/app/public/stylesheets/navbar_style.css
+++ b/app/public/stylesheets/navbar_style.css
@@ -43,11 +43,14 @@
 }
 .btn{
     border-radius: 50px;
-    margin-left:-42px;
     display: flex;
     align-content: center;
     height: 38px;
     align-items: center;
+}
+
+.margin-left-42{
+    margin-left:-42px;
 }
 
 .bi-search{
